# cost_of_skills

./: .travis.yml  HISTORY.rst  Makefile  README.rst  pyproject.toml  tox.ini
cost_of_skills/: CONTRIBUTING.rst
cost_of_skills/.github/: ISSUE_TEMPLATE.md
cost_of_skills/docs/: Makefile  index.rst  make.bat  usage.rst
cost_of_skills/tests/: __init__.py  test_cost_of_skills.py
docs/: conf.py  installation.rst
notebooks/: 2024-01-11-test-gradio.ipynb  2024-01-13-interval-learn.ipynb  2024-01-13-point-learn.ipynb  2024_01_11_test_gradio.ipynb  least_squares_for_skills.ipynb
src/cost_of_skills/: __init__.py  main.py
src/cost_of_skills/data/: my_skill_dict_cleaned_v2 (1).json
