[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "cost_of_skills"
version = "0.1.0"
description = "Python Boilerplate contains all the boilerplate you need to create a Python package."
readme = "README.rst"
authors = [
  {name = "Audrey Roy Greenfeld", email = "audreyr@example.com"}
]
maintainers = [
  {name = "Audrey Roy Greenfeld", email = "audreyr@example.com"}
]
classifiers = [

]
license = {text = "Not open source"}
dependencies = [
  
]

[project.optional-dependencies]
dev = [
    "coverage",  # testing
    "mypy",  # linting
    "pytest",  # testing
    "ruff"  # linting
]

[project.urls]

bugs = "https://github.com/komarovala/cost_of_skills/issues"
changelog = "https://github.com/komarovala/cost_of_skills/blob/master/changelog.md"
homepage = "https://github.com/komarovala/cost_of_skills"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.package-data]
"*" = ["*.*"]




# Mypy
# ----

[tool.mypy]
files = "."

# Use strict defaults
strict = true
warn_unreachable = true
warn_no_return = true

[[tool.mypy.overrides]]
# Don't require test functions to include types
module = "tests.*"
allow_untyped_defs = true
disable_error_code = "attr-defined"

